# regex-explainer

./: .gitignore  CHANGELOG.md  Makefile  PLAN.md  README.md  UPDATE.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
docs/: AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PLAN.md  PROJECT.md  RELEASE.md  ROADMAP.md  SECURITY.md
src/regex_explainer/: __init__.py  cli.py  core.py
tests/: test_cli.py  test_core.py
