[project]
name = "regex-explainer"
version = "0.1.0"
description = "Regex explainer CLI"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[project.scripts]
regex-explainer = "regex_explainer.cli:main"

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
